--- a/index.html
+++ b/index.html
@@ -27,10 +27,11 @@
     <main>
       <div id="booksDiv"></div>
     </main>
-    
-    <script src="js/Book.js"></script>
-    <script src="js/Member.js"></script>
     <script src="js/Library.js"></script>
+    <script src="js/Book.js"></script>
+    <script src="js/Users.js"></script>
+    <script src="js/Member.js"></script>
+    
     <script src="js/app.js"></script>
   </body>
 </html>
