Add add book page forms

--- a/index.html
+++ b/index.html
@@ -72,9 +72,9 @@
     <main>
       <h2 id="main-heading">Welcome</h2>
       <div class="main-content"> 
-        <div id="add-books-div">
-          <!-- ITEM DISPLAY
-          <div class="item-div">
+        </div>     
+        <!-- ITEM DISPLAY -->
+          <!-- <div class="item-div">
             <p>
               <strong>Title: </strong>${this.title}<br>
               <strong>Author: </strong><span class="searchByClick">${this.author}</span><br>
@@ -84,10 +84,8 @@
               <strong>ISBN: </strong>${this.isbn}<br>
             </p>
             <p class="unavailable">Out of stock</p>
-          </div> 
-        END -->
-        </div>     
-        
+          </div>  -->
+        <!-- END -->
       </div>
     </main>
     <footer></footer>
