--- a/index.html
+++ b/index.html
@@ -72,21 +72,19 @@
     <main>
       <h2 id="main-heading">Welcome</h2>
       <div class="main-content"> 
-        
-        </div>     
         <!-- ITEM DISPLAY -->
-          <!-- <div class="item-div">
-            <p>
-              <strong>Title: </strong>${this.title}<br>
-              <strong>Author: </strong><span class="searchByClick">${this.author}</span><br>
-              <strong>Series: </strong>${this.series}<br>
-              <strong>Genre: </strong>${this.genre}<br>
-              <strong>Pages: </strong>${this.pages}<br>
-              <strong>ISBN: </strong>${this.isbn}<br>
-            </p>
-            <p class="unavailable">Out of stock</p>
-          </div>  -->
-        <!-- END -->
+        <!-- <div class="item-div">
+          <p>
+            <strong>Title: </strong>${this.title}<br>
+            <strong>Author: </strong><span class="searchByClick">${this.author}</span><br>
+            <strong>Series: </strong>${this.series}<br>
+            <strong>Genre: </strong>${this.genre}<br>
+            <strong>Pages: </strong>${this.pages}<br>
+            <strong>ISBN: </strong>${this.isbn}<br>
+          </p>
+          <p class="unavailable">Out of stock</p> 
+        </div>  -->
+      <!-- END --> 
       </div>
     </main>
     <footer></footer>
@@ -96,6 +94,7 @@
     <script src="js/Users.js"></script>
     <script src="js/Member.js"></script>
     <script src="js/ViewHandler.js"></script>
+    <script src="js/Modals.js"></script>
     <script src="js/app.js"></script>
   </body>
 </html>
