--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="utf-8">
     <title>LIBRARYmanager - Index</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
   </head>
   <body id="index">
@@ -15,7 +17,7 @@
           Member: <span class="active-member"></span>
         </p>
       </div>
-      <h1><a href="">LIBRARYmanager</a></h1>
+      <h1><a href="">LibraryManager</a></h1>
       <nav id="header-navbar">
         <ul>
           <li>
@@ -72,6 +74,8 @@
     <main>
       <h2 id="main-heading">Welcome</h2>
       <div class="main-content"> 
+      </div>
+        
         <!-- ITEM DISPLAY -->
         <!-- <div class="item-div">
           <p>
