Update item cards layout and userhas span

--- a/index.html
+++ b/index.html
@@ -82,6 +82,7 @@
           <strong>Pages: </strong><span>441</span>
           <strong>ISBN: </strong><span>0575077883</span>
           <p class="available">2 in stock</p>
+          <span class="user-has-span">Checked out by active user</span>
           <button class="selector-btn item-card-btn">Check Out</button>
         </div>
           <!-- <div class="item-card-modal show-modal">
