Add confirmation modal and fade out when adding book, update layout

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
     <main>
       <h2 id="main-heading">Welcome</h2>
       <div class="main-content"> 
-        <div id="101" class="item-div">
+        <!-- <div id="101" class="item-div">
           <strong>Title: </strong><span>Before They Are Hanged</span>
           <strong>Author: </strong><span>Joe Abercrombie</span>
           <strong>Series: </strong><span>The First Law</span>
@@ -84,7 +84,7 @@
           <p class="available">2 in stock</p>
           <span class="user-has-span">Checked out by active user</span>
           <button class="selector-btn item-card-btn">Check Out</button>
-        </div>
+        </div> -->
           <!-- <div class="item-card-modal show-modal">
             <div class="add-book-modal-content">
             <form>
