Add htmlcontent class, Add item search by term, instock and remove functions, add edit and remove functions and modals

--- a/index.html
+++ b/index.html
@@ -121,6 +121,7 @@
     <script src="js/Book.js"></script>
     <script src="js/Users.js"></script>
     <script src="js/Member.js"></script>
+    <script src="js/HTMLContent.js"></script>
     <script src="js/ViewHandler.js"></script>
     <script src="js/Modals.js"></script>
     <script src="js/app.js"></script>
