Start item search page, update CSS styling

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             SEARCH
             <div class="dropdown-content">
               <ul>
-                <li>Items</li>
+                <li class="itemSearch">Items</li>
                 <li>In Stock</li>
                 <li>Members</li>
               </ul>
