Add/finish item search pages and functions

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             <div class="dropdown-content">
               <ul>
                 <li class="itemSearch">Items</li>
-                <li>In Stock</li>
+                <li class="inStockSearch">In Stock</li>
                 <li>Members</li>
               </ul>
             </div>
