Add late rental counter and user banned var, refactoring

--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
             MEMBERS
             <div class="dropdown-content">
               <ul>
+                <li>Active</li>
                 <li>All</li>
                 <li>Add</li>
                 <li>Edit</li>
