Add member details item divs, member editing and removal functions

--- a/index.html
+++ b/index.html
@@ -38,7 +38,6 @@
                 <li class="activeMember">Active</li>
                 <li class="allMembers">All</li>
                 <li class="addMember">Add</li>
-                <li class="editMember">Edit</li>
               </ul>
             </div>
           </li>
@@ -75,7 +74,7 @@
     <main>
       <h2 id="main-heading">Welcome</h2>
       <div class="main-content"> 
-        <div class="sub-content">
+        <!-- <div class="sub-content">
           <div class="user-details">
             <h3>Member Details</h3>
             <span>Name:</span> <p>Drew Borrowmore</p>
@@ -84,16 +83,25 @@
             <span>Phone:</span> <p>9000</p>
             <span>Email:</span> <p>9000</p>
             <span>Address:</span> <p>123, This Really Long Street Name, This Really Long Street Name, This Really Long Street Name, A long town name here, RE12AD</p>
+            <button class="selector-btn edit-member-btn">Edit</button>
           </div>
           <div class="user-details">
-            <h3>Library Info</h3>
-            <span>Member Status:</span> <p>Active</p>
+            <h3>Library Info</h3> -->
+            <!-- <ul>
+              <li>Member Status: </li> <p>Active</p> <button class="selector-btn"></button>
+              <li>Joined: <p>18/02/2021</p></li>
+              <li></li>
+              <li></li>
+              <li></li>
+            </ul> -->
+            <!-- <span>Member Status:</span> <p>Active</p>
             <span>Joined:</span> <p>18/02/2021</p>
             <span>Current Rentals:</span> <p>9</p>
             <span>Total Rentals:</span> <p>34</p>
             <span>Late Returns:</span> <p>3</p>
+            <button class="selector-btn">Reset</button>
           </div>
-        </div>
+        </div> -->
         <!-- <div id="101" class="item-div">
           <strong>Title: </strong><span>Before They Are Hanged</span>
           <strong>Author: </strong><span>Joe Abercrombie</span>
@@ -127,7 +135,7 @@
               </form>
             </div>
           </div> -->
-        </div> 
+        <!-- </div>  -->
       </div>
         
         <!-- ITEM DISPLAY -->
