--- a/index.html
+++ b/index.html
@@ -74,14 +74,14 @@
     <main>
       <h2 id="main-heading">Welcome</h2>
       <div class="main-content"> 
-        <div id="9000" class="member-div">
+        <!-- <div id="9000" class="member-div">
           <strong>AccNum: </strong><span>9000</span>
           <strong>Name: </strong><span>Drew Borrowmore</span>
           <strong>Account Status: </strong><span>Open</span>
           <strong>Member Since: </strong><span>20.02.2021</span>
           <span class="user-active available">Active</span>
           <button class="selector-btn member-card-btn">Details</button>
-        </div>
+        </div> -->
         <!-- <div class="sub-content">
           <div class="user-details">
             <h3>Member Details</h3>
