Edit functions to allow for site browsing while no active member is set

--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
               <ul>
                 <li><input type="text" class="change-member-input"></li>
                 <li class="changeActiveMember">Confirm</li>
+                <li class="clearActiveMember">Clear</li>
               </ul>
             </div>
           </li>
