--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>LibraryManager - Index</title>
+    <title>LibraryManager</title>
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
@@ -17,7 +17,7 @@
           Member: <span class="active-member"></span>
         </p>
       </div>
-      <h1><a href="">LibraryManager</a></h1>
+      <h1><a onclick="viewHandler.handleMainDisplay('welcome')">LibraryManager</a></h1>
       <nav id="header-navbar">
         <ul>
           <li>
