--- a/signin.html
+++ b/signin.html
@@ -1,19 +1,31 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8">
+    <meta charset="utf-8" />
     <title>LIBRARYmanager - Sign In</title>
-    <link href="css/signin.css" rel="stylesheet">
+    <link href="css/signin.css" rel="stylesheet" />
   </head>
   <body>
     <main>
       <h1>LIBRARYmanager</h1>
       <div class="signInDiv">
-      <form id="login-form">
-        <input type="text" name="username" id="username-field" class="login-form-field" placeholder="Username">
-        <input type="password" name="password" id="password-field" class="login-form-field" placeholder="Password">
-        <input type="submit" value="Login" id="login-form-submit">
-    </form>
+        <form id="login-form">
+          <input
+            type="text"
+            name="username"
+            id="username-field"
+            class="login-form-field"
+            placeholder="Username"
+          />
+          <input
+            type="password"
+            name="password"
+            id="password-field"
+            class="login-form-field"
+            placeholder="Password"
+          />
+          <input type="submit" value="Login" id="login-form-submit" />
+        </form>
       </div>
     </main>
     <script src="js/users.js"></script>
